...
            </View>
          ) : null}
          <View style={styles.menuSection}>
            <MenuItem icon="account-edit" label="Edit Personal Info" onPress={() => navigation.navigate('EditProfile')} styles={styles} />
            <MenuItem icon="home-city" label="Addresses" onPress={() => navigation.navigate('Addresses')} styles={styles} />
            <MenuItem icon="gift-outline" label="Refer & Earn" onPress={() => navigation.navigate('Referrals')} styles={styles} />
            <MenuItem icon="face-man" label="Skin Analysis" onPress={() => navigation.navigate('SkinAnalysis')} styles={styles} testID="skin-analysis-button" />
            <MenuItem
              icon="face-man-shimmer"
              label="Skin Analysis History"
              onPress={() => navigation.navigate('AnalysisHistory')}
              styles={styles}
            />
...
